Fix(es): issue with Sidebar webkit scrollbar

--- a/client/src/components/layout/Sider.module.css
+++ b/client/src/components/layout/Sider.module.css
@@ -21,8 +21,4 @@
     border-right: unset;
     scrollbar-width: thin;
   }
-
-  .Sider::-webkit-scrollbar {
-    display: unset;
-  }
 }
